Activity : - Finsihing - Hyperlink - OL and UL

--- a/no-copy.html
+++ b/no-copy.html
@@ -6,7 +6,7 @@
 <body bgcolor="#02101F">
 	<table id="heading">
 		<tr>
-			<td width="680"><img src="logo.png" width="148px" height="43px"></td>
+			<td width="680"><a href="https://www.garena.co.id/"><img src="logo.png" width="148px" height="43px"></a></td>
 			<td></td>
 			<td></td>
 			<td width="120"><img src="aovlogo.png" width="124px" height="55px"></td>
@@ -27,7 +27,7 @@
 	<table id="mid">
 		<tr>
 			<td width="100"></td>
-			<td width="200"><font face="arial" color="white"><b>KOMUNITAS</b></font></td>
+			<td width="200"><font face="arial" color="white"><b><a href="https://aov.garena.co.id/desktop/">KOMUNITAS</a></b></font></td>
 			<td width="200"><font face="arial" color="white"><b>PEDOMAN</b></font></td>
 			<td width="200"><font face="arial" color="white"><b>HERO</b></font></td>
 			<td width="200"><font face="arial" color="white"><b>E-SPORT</b></font></td>
@@ -42,14 +42,68 @@
 				<hr width="100%" color="white" size="0.01">
 			</td>
 		</tr>
-		<tr>
-			<td bgcolor="red"></td>
-			<td bgcolor="white"></td>
-			<td bgcolor="blue"></td>
+	</table>
+	<table id="mid2" style="border:0;border-collapse: collapse;border-spacing:0">
+		<tr height=450>
+			<td width="980" bgcolor="#262523" align="center">
+				<font color="white" face="arial"><b>BERITA</b></font>
+				<hr width="100%" color="white" size="0.01">
+				<p><img src="1.png" width="429px" height="225px"></p>
+				<p><font color="white">Lorem Ipsum and Lorem Ipsum you is what the wow hahahahaha</font></p>
+				<p><font color="white">Lorem Ipsum and Lorem Ipsum you is what the wow hahahahaha</font></p>
+				<p><font color="white">Lorem Ipsum and Lorem Ipsum you is what the wow hahahahaha</font></p>
+				<p><font color="white">Lorem Ipsum and Lorem Ipsum you is what the wow hahahahaha</font></p>
+				<td width="700" bgcolor="#262523" align="center">
+				<font color="white" face="arial"><b>FREE HERO</b></font>
+				<hr width="100%" color="white" size="0.01">
+					<p>
+					<img src="2.png" width="76px" height="84px">
+					<img src="2.png" width="76px" height="84px">
+					<img src="2.png" width="76px" height="84px">
+					</p>
+					<p>
+						<img src="3.png" width="76px" height="76px">
+						<img src="3.png" width="76px" height="76px">
+						<img src="3.png" width="76px" height="76px">
+					</p>
+					<hr width="100%" color="white" size="0.01">
+					<p><font color="white" face="arial"><b>NEW HERO</b></font></p>
+					<p>
+					<img src="4.png" width="76px" height="76px">
+					</p>
+					<p><font color="white" face="arial"><b> </b></font></p>
+					<p><font color="white" face="arial"><b>OMEN : The Bla Bla</b></font></p>
+				</td>
+			</td>
+			<td width="20"></td>
+			<td align="center" width="400" bgcolor="#262523">
+			<font color="white" face="arial"><b>DAPATKAN AOV</b></font>
+			<hr width="100%" color="white" size="0.01">
+			<p><img src="aovi.jpg" width="127px" height="145px"></p>
+			<p><img src="down.png" width="179px" height="166px"></p>
+			<p><font color="white">Term & Licensed by Tencent Games</font></p>
+			</td>
 		</tr>
 	</table>
-
-
-
 </body>
+<footer>
+	<table>
+		<tr>
+			<hr width="100%" color="white" size="0.01">
+			<td width="650" colspan="3">
+				<text><font face="arial" color="white">ABOUT</font></text>
+				<ul>
+					<font face="arial" color="white"><p><li>Nama : Ibnu Putra A</li></p></font>
+					<font face="arial" color="white"><p><li>No : 15</p></li></font>
+					<font face="arial" color="white"><p><li>Kelas : XI RPL 4</li></p></font>
+				</ul>					
+			</td>
+			<td width="100" height="100" colspan="3"></td>
+			<td width="550">
+				<text><font face="arial" color="white">Design by IbnuPutraA</font></text>
+			</td>
+			<td width="120"><img src="tl.png" width="224px" height="72px"></td>
+		</tr>
+	</table>
+</footer>
 </html>
